Fix horizontal scrolling for mobile view & finish responsiveness for the footer/about section

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .about {
   background-color: #0a2850;
   color: #fff;
@@ -39,7 +43,7 @@
 
 .about__circle {
   position: absolute;
-  background-color: #1878DC;
+  background-color: #1878dc;
   border-radius: 50%;
   width: 426px;
   height: 426px;
@@ -64,5 +68,52 @@
   100% {
     opacity: 0;
     transform: scale(1.3);
+  }
+}
+
+@media screen and (max-width: 1130px) {
+  .about {
+    padding: 70px 50px 100px;
+    flex-direction: column;
+  }
+
+  .about__content {
+    max-width: 560px;
+    font-size: 16px;
+    gap: 20px;
+  }
+
+  .about__circle {
+    width: 326px;
+    height: 326px;
+  }
+
+  .about__title {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .about {
+    padding: 50px 30px 70px;
+    flex-direction: column;
+  }
+
+  .about__content {
+    max-width: 360px;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .about__circle {
+    width: 180px;
+    height: 180px;
+    left: -60px;
+    top: -50px;
+  }
+
+  .about__content {
+    max-width: 300px;
   }
 }
